--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 *{
-  margin:5px;
+  margin:5x
   padding: 5px;
   font-family: sans-serif;
 
@@ -35,4 +35,3 @@ text-align: center;
 .contenido{
 border:solid 1px black;
 }
-
