--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,21 @@
 *{
-  margin:5x
-  padding: 5px;
-  font-family:sans-serif;
+
+  font-family: sans-serif;
 
 }
 
+.contenedor{
+  height: 1000px;
+  width: 1200px;
+  margin: 5px;
+  padding: 5px;
+  }
+
 .navegacion{
-background-color: black;
+  background-color: rgb(0, 0, 0);
+  width: 20%;
+  height: 100%;
+  float: left;
 }
 
 .navegacion li a{
@@ -16,22 +25,49 @@ color: white;
 
 .navegacion li:hover{
 background-color:violet;
+filter:brightness(0,5);
+transition:0.5s;
 }
 
-.contenedor{
-border:solid 1px black;
-margin: 5px;
-padding: 5px;
+
+.contenido1{
+width: 80%;
+height: 25%;
+background-color: rgb(128, 0, 0);
+color: white;
+padding: 0.1px;
+text-align: center;
+
 }
 
-.header{
+
+.contenido2{
+width: 80%;
+height: 25%;
 background-color: green;
 color: white;
-padding: 10px;
-border:solid 1px black;
+padding: 0.1px;
+text-align: center;
+
+}
+
+
+.contenido3{
+width: 80%;
+height: 25%;
+background-color: rgb(55, 0, 255);
+color: white;
+padding: 0.1px;
 text-align: center;
 }
 
-.contenido{
-border:solid 1px black;
+
+.contenido4{
+width: 80%;
+height: 25%;
+background-color: rgb(255, 0, 212);
+color: white;
+padding: 0.1px;
+text-align: center;
 }
+
