--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,15 @@
 *{
-
+  
   font-family: sans-serif;
+  padding: 0px;
+  margin: 0px;
 
 }
 
 .contenedor{
   height: 1000px;
-  width: 1200px;
-  margin: 5px;
-  padding: 5px;
+  width: auto;
+  
   }
 
 .navegacion{
@@ -16,11 +17,14 @@
   width: 20%;
   height: 100%;
   float: left;
+  top: 10px;
+  padding: 8px;
 }
 
 .navegacion li a{
 text-decoration: none;
-color: white;
+color: rgb(255, 255, 255);
+margin-left: 10px;
 }
 
 .navegacion li:hover{
@@ -31,43 +35,41 @@ transition:0.5s;
 
 
 .contenido1{
-width: 80%;
+width: 100%;
 height: 25%;
-background-color: rgb(128, 0, 0);
+background-color: rgb(255, 0, 0);
 color: white;
-padding: 0.1px;
 text-align: center;
-
+padding: 2px;
 }
 
 
 .contenido2{
-width: 80%;
+width: 100%;
 height: 25%;
-background-color: green;
+background-color: rgb(0, 255, 0);
 color: white;
-padding: 0.1px;
 text-align: center;
-
+padding: 2px;
 }
 
 
 .contenido3{
-width: 80%;
+width: 100%;
 height: 25%;
-background-color: rgb(55, 0, 255);
+background-color: rgb(0, 0, 255);
 color: white;
-padding: 0.1px;
 text-align: center;
+padding: 2px;
 }
 
 
 .contenido4{
-width: 80%;
+width: 100%;
 height: 25%;
-background-color: rgb(255, 0, 212);
+background-color: rgb(255, 0, 255);
 color: white;
-padding: 0.1px;
 text-align: center;
+padding: 2px;
 }
 
